fix double scroll-bar

--- a/components/Flipper/FlipRestrictionList/FlipRestrictionList.module.css
+++ b/components/Flipper/FlipRestrictionList/FlipRestrictionList.module.css
@@ -1,6 +1,6 @@
 .restrictionList {
     flex: 1 1 auto;
-    overflow-y: auto;
+    overflow-y: hidden;
     min-height: 200px;
 }
 
